--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "start": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
     "postcss": "^8.5.6",
